<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.foxyawn.onu.SignupActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <include
        android:id="@+id/toolbar"
        layout="@layout/signup_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48dp"
        android:textAlignment="center"
        android:id="@+id/signup_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/typeLayout"
        android:layout_margin="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_title">

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:id="@+id/consumer"
            android:text="@string/type_consumer"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:background="@drawable/type_button_click"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:id="@+id/provider"
            android:text="@string/type_provider"
            android:textSize="16dp"
            android:background="@drawable/border"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="2dp"
        android:id="@+id/accountLayout"
        android:layout_margin="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edittext"
            android:padding="12dp"
            android:textSize="16dp"
            android:inputType="textEmailAddress"
            android:hint="@string/placeholder_email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edittext"
            android:padding="12dp"
            android:textSize="16dp"
            android:inputType="textPassword"
            android:hint="@string/placeholder_password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="12dp"
            android:textSize="16dp"
            android:inputType="textPassword"
            android:hint="@string/placeholder_retry_password"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="2dp"
        android:layout_margin="16dp"
        android:id="@+id/infoLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edittext"
            android:padding="12dp"
            android:textSize="16dp"
            android:inputType="text"
            android:hint="@string/placeholder_name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="12dp"
            android:textSize="16dp"
            android:inputType="phone"
            android:hint="@string/placeholder_phone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:id="@+id/regionLayout"
        android:padding="2dp"
        android:layout_margin="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoLayout">

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/form_city">
        </android.support.v7.widget.AppCompatSpinner>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/form_district">

        </Spinner>

    </LinearLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:layout_margin="16dp"
        android:text="@string/form_submit"
        android:background="@drawable/type_button_click"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regionLayout" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
